Set up project layout

--- a/index.html
+++ b/index.html
@@ -14,21 +14,11 @@
         <div class="header">
 
         </div>
+
+        <h2 class="project-heading">Your Projects</h2>
         <div class="projects">
-            <h2>Your Projects</h2>
+            
             <div class="card">
-                <h3>Project 1</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
-                </p>
-            </div>
-            <!-- <div class="card">
-                <h3>Project 1</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
-                </p>
-            </div> -->
-            <!-- <div class="card">
                 <h3>Project 1</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
@@ -39,7 +29,43 @@
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                     Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
                 </p>
-            </div> -->
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
         </div>
     </div>
 </body>
