--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
 
         </div>
 
-        <h2 class="project-heading">Your Projects</h2>
+        <div class="nav">
+            <h2>Your Projects</h2>
+        </div>
+       
         <div class="projects">
             
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
             <div class="card">
                 <h3>Project 1</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
