--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 </p>
             </div>
         </div>
+        <div class="footer">
+            
+        </div>
     </div>
 </body>
 </html>
