Add padding to the list items

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <span class="material-symbols-outlined">
                         person
                     </span>
-                    Vaisakh
+                    Login
                 </li>
             </div>
             <ul class="links">
