Add styling to the buttons in the header

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                         </span>Messages
                 </li>
             </ul>
-            
         </div>
+
         <div class="header">
-
+            
+                <button class="button-34">New</button>
+                <button class="button-34">Share</button>
+                <button class="button-34">Edit</button>
         </div>
-
         <div class="nav">
             <h2>Your Projects</h2>
         </div>
