Add styling and positioned the profile picture

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <button class="button-34">New</button>
                 <button class="button-34">Share</button>
                 <button class="button-34">Edit</button>
+                <div class="profile-picture">
+                    <img src="./assets/images/Unknown.jpg" alt="profilepic">
+                </div>
         </div>
         <div class="nav">
             <h2>Your Projects</h2>
