--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 </div>
         </div>
         <div class="nav">
-            <h2>Your Projects</h2>
+            <h2 class="projects-heading">Your Projects</h2>
+            <h2 class="announce-heading">Announcements</h2>
         </div>
        
         <div class="projects">
-            
             <div class="card">
                 <h3>Project 1</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
