Add an announcement div and styled it

--- a/index.html
+++ b/index.html
@@ -123,9 +123,22 @@
                 </p>
             </div>
         </div>
-        <div class="right-panel">
-
+        
+        <div class="announcements">
+            <div class="trending1">
+                <h3>Trending</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur dignissimos quisquam exercitationem quibusdam molestiae nesciunt, mollitia soluta voluptate doloremque beatae numquam ut! Sint, eos. Reiciendis cumque incidunt quaerat aliquam excepturi!
+                </p>
+            </div>
+            <div class="trending2">
+                <h3>Coming Up</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur dignissimos quisquam exercitationem quibusdam molestiae nesciunt, mollitia soluta voluptate doloremque beatae numquam ut! Sint, eos. Reiciendis cumque incidunt quaerat aliquam excepturi!
+                </p>
+            </div>
         </div>
+
         <div class="footer">
             
         </div>
