Add some box shadow and border radius to the cards

--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
                     Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
                 </p>
             </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
+            <div class="card">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Ipsa, sequi unde sed quia laborum molestiae dignissimos dolores ducimus saepe asperiores?
+                </p>
+            </div>
         </div>
 
         <div class="announcements">
